--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,12 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Find the best products at the cheapest products" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     referrerpolicy="no-referrer" />
-  <title>Welcome to My E-Commerce App</title>
+  <title>Welcome to Missouri River Valley Clothing Co.</title>
 </head>
 
 <body>
